[package]
name = "prod"
version = "0.3.0"
authors = ["Peter Pearson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: replace this with yaml-rust2 in the future...
yaml-rust = "0.4"

# provision items
ureq = { version = "2.9.*", optional = true, features = ["json", "charset"] }
serde = { version = "1.0.*", optional = true, features = ["derive"] }
serde_json = { version = "1.0.*", optional = true }

# control items
ssh2 = { version = "0.9", optional = true }
ssh-rs = { version = "0.5.0", optional = true, features = ["scp"] }
temp-file = { version = "0.1.8", optional = true }
rpassword = { version = "5.0", optional = true }


[features]
# TODO: add support at the code level for conditional enabling of provision/control parts of prod
provision = ["ureq", "serde", "serde_json"]
control = ["remote", "rpassword"]

# actual remote crates used indirectly via 'control'...
openssh = ["ssh2"]
sshrs = ["ssh-rs", "temp-file"]

# dependencies for 'control'...
# Select one of these...
#remote = ["openssh"]
remote = ["sshrs"]

default = [
    "control",
    "provision"
]
